melhorando o código com sass e gulp

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Were Soldiers Landing Page</title>
-    <link rel="stylesheet" href="slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" href="slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="src/slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="src/slick-1.8.1/slick/slick-theme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
     <section class="hero" id="hero">
@@ -32,11 +32,11 @@
         </div>
         <button>
             <a href="https://www.youtube.com/watch?v=pwYYULVrVVU" target="_blank">
-                <i><img src="icons/play.svg" alt="icone play" style="height: 32px;"></i>
+                <i><img src="src/icons/play.svg" alt="icone play" style="height: 32px;"></i>
                 <h6>PLAY TRAILER</h6>
             </a>
         </button>
-        <i><img src="icons/scroll-down.svg" alt="scroll-down" style="height: 40px;"></i>
+        <i><img src="src/icons/scroll-down.svg" alt="scroll-down" style="height: 40px;"></i>
     </section>
 
     <section class="castCrew" id="castCrew">
@@ -44,60 +44,60 @@
         <h4>THE TEAM</h4>
 
         <div class="slides">
-            <div class="slides__group active">
+            <div class="slides__group slides__group--active">
                 <div class="slides__group__item">
                     <h3>Mel Gibson</h3>
-                    <img src="images/gibson.jpg" alt="Mel Gibson">
+                    <img src="dist/images/gibson.jpg" alt="Mel Gibson">
                 </div>
                 <div class="slides__group__item">
                     <h3>Greg Kinnear</h3>
-                    <img src="images/kinnear.jpg" alt="Greg Kinnear">
+                    <img src="dist/images/kinnear.jpg" alt="Greg Kinnear">
                 </div>
                 <div class="slides__group__item">
                     <h3>Sam Elliott</h3>
-                    <img src="images/elliott.jpg" alt="Sam Elliott">
+                    <img src="dist/images/elliott.jpg" alt="Sam Elliott">
                 </div>
                 <div class="slides__group__item">
                     <h3>Madeleine Stowe</h3>
-                    <img src="images/stowe.jpg" alt="Madeleine Stowe">
+                    <img src="dist/images/stowe.jpg" alt="Madeleine Stowe">
                 </div>
                 <div class="slides__group__item">
                     <h3>Chris Klein</h3>
-                    <img src="images/klein.jpg" alt="Chris Klein">
+                    <img src="dist/images/klein.jpg" alt="Chris Klein">
                 </div>
                 <div class="slides__group__item">
                     <h3>Keri Russell</h3>
-                    <img src="images/russell.webp" alt="Keri Russell">
+                    <img src="dist/images/russell.webp" alt="Keri Russell">
                 </div>
                 <div class="slides__group__item">
                     <h3>Barry Pepper</h3>
-                    <img src="images/pepper.jpg" alt="Barry Pepper">
+                    <img src="dist/images/pepper.jpg" alt="Barry Pepper">
                 </div>
             </div>
 
             <div class="slides__group">
                 <div class="slides__group__item">
                     <h3>Randall Wallace</h3>
-                    <img src="images/Wallace.jpg" alt="Randall Wallace">
+                    <img src="dist/images/Wallace.jpg" alt="Randall Wallace">
                 </div>
                 <div class="slides__group__item">
                     <h3>Stephen McEveety</h3>
-                    <img src="images/mceveety.jpg" alt="Stephen McEveety">
+                    <img src="dist/images/mceveety.jpg" alt="Stephen McEveety">
                 </div>
                 <div class="slides__group__item">
                     <h3>Joseph L. Galloway</h3>
-                    <img src="images/Galloway.webp" alt="Joseph L. Galloway">
+                    <img src="dist/images/Galloway.webp" alt="Joseph L. Galloway">
                 </div>
                 <div class="slides__group__item">
                     <h3>Harold G. Moore</h3>
-                    <img src="images/Moore.jpg" alt="Harold G. Moore">
+                    <img src="dist/images/Moore.jpg" alt="Harold G. Moore">
                 </div>
             </div>
         </div>
 
         <nav class="castCrew__nav">
             <div class="castCrew__nav__tabs">
-                <button class="tabButton active">CAST</button>
+                <button class="tabButton tabButton--active">CAST</button>
                 <h4>|</h4>
                 <button class="tabButton">CREW</button>
             </div>
@@ -113,12 +113,12 @@
                 <p>The Battle of la Drang was one of the major battles in Vietnam and took place November 14th-17th 1965 in the la Drang Valley. The movie depicts a stranded division of Vietnam soldiers who are accidentally misled into a Vietcong basecamp. Although the men are surrounded and helplessly outnumbered 400 to 4000, they manage to hold their ground with the help of air support and artillery and eventually end up defeating the Vietcong.</p>
                 <p>The movie very closely matches how We Were Soldiers Once... And Young described the battle. In fact <strong>Harold G. Moore,</strong> the Author of We Were Soldies Once... And Young, described the movie as the only one to "get it right." This made the film very realistic and historically accurate.</p>
             </div>
-            <img src="images/story_colage.png" alt="colage soldiers la drang symbol">
+            <img src="dist/images/story_colage.png" alt="colage soldiers la drang symbol">
         </div>
     </section>
 
-    <script src="code.jquery.com_jquery-3.7.1.min.js"></script>
-    <script src="slick-1.8.1/slick/slick.js"></script>
-    <script src="main.js"></script>
+    <script src="src/code.jquery.com_jquery-3.7.1.min.js"></script>
+    <script src="src/slick-1.8.1/slick/slick.js"></script>
+    <script src="dist/main.js"></script>
 </body>
 </html>
