anulando as linhas de código respectivas a citações e slides de 'CREW'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="https://www.youtube.com/watch?v=pwYYULVrVVU" target="_blank">WATCH TRAILER</a>
                 </li>
                 <li>
-                    <a href="#castCrew">CAST & CREW</a>
+                    <a href="#castCrew">CAST <!--& CREW--></a>
                 </li>
                 <li>
                     <a href="#story">STORY</a>
@@ -40,7 +40,7 @@
     </section>
 
     <section class="castCrew" id="castCrew">
-        <h2>CAST & CREW</h2>
+        <h2>CAST <!--& CREW--></h2> 
         <h4>THE TEAM</h4>
 
         <div class="slides">
@@ -75,6 +75,7 @@
                 </div>
             </div>
 
+            <!--
             <div class="slides__group">
                 <div class="slides__group__item">
                     <h3>Randall Wallace</h3>
@@ -93,15 +94,16 @@
                     <img src="dist/images/Moore.jpg" alt="Harold G. Moore">
                 </div>
             </div>
+            -->                                                                                 <!-- Anulando a aba CREW e nav -->
         </div>
 
-        <nav class="castCrew__nav">
+        <!-- <nav class="castCrew__nav">
             <div class="castCrew__nav__tabs">
                 <button class="tabButton tabButton--active">CAST</button>
                 <h4>|</h4>
                 <button class="tabButton">CREW</button>
             </div>
-        </nav>
+        </nav> -->
     </section>
 
     <section class="story" id="story">
